azure-loadbalancer/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
    name: ingress-nginx-controller
    # annotations:
      # nginx.ingress.kubernetes.io/ssl-redirect: "false"
      # nginx.ingress.kubernetes.io/use-regex: "true"
      # nginx.ingress.kubernetes.io/rewrite-target: /$2
      # service.beta.kubernetes.io/azure-load-balancer-resource-group: "mc_greenfield-group-01_camunda-greenfield-01_eastus"
spec:
  rules:
    - host: identity.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-identity
                port:
                  number: 80
    - host: keycloak.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
    - host: operate.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-operate
                port:
                  number: 80
    - host: tasklist.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-tasklist
                port:
                  number: 80
    - host: optimize.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-optimize
                port:
                  number: 80
